# campusandclubs

./: .gitignore  README.md  api.http  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rav.yaml
clients/: clients.md
services/api/: accounts.http  clubs.http  docs.md  pyproject.toml
services/api/apps/accounts/: admin.py  consumers.py  emails.py  managers.py  models.py  routing.py  serializers.py  urls.py  views.py
services/api/apps/accounts/config/: authentication.py
services/api/apps/accounts/dtos/: __init__.py  login.py
services/api/apps/accounts/migrations/: 0002_remove_user_department_remove_user_institute_and_more.py
services/api/apps/accounts/policies/: user.py
services/api/apps/accounts/repositories/: __init__.py
services/api/apps/accounts/services/: __init__.py
services/api/apps/clubs/: admin.py  demo.md  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
services/api/apps/clubs/__views/: __init__.py
services/api/apps/clubs/admin/: event_admins.py  invite_admins.py  role_admins.py
services/api/apps/connections/: models.py  urls.py  views.py
services/api/apps/institutes/: admin.py  models.py  urls.py
services/api/apps/interactions/: admin.py  models.py  serializers.py  urls.py  views.py
services/api/apps/notifications/: admin.py  serializers.py  urls.py  views.py
services/api/apps/posts/: admin.py  models.py  models_old.py  serializers.py  tasks.py  urls.py  views.py
services/api/core/: settings.py  urls.py
services/api/core/services/: __init__.py  base.py
services/api/core/views/: __init__.py
(+233 files in other folders)
